# AI

./: .env.example  .gitignore  AGENTS.md  LICENSE  README.md  pyproject.toml
docs/: adoption.md  github-growth.md  methodology.md  publication-safety.md
examples/allocation-state-propagation/: 01-task-brief.md  02-analysis.md  03-algorithm.md  04-automated-checks.md  05-manual-test-cases.md  06-report.md
examples/reservation-state-propagation/: 01-task-brief.md  02-analysis.md  03-algorithm.md  04-automated-checks.md  05-manual-test-cases.md  06-report.md
skills/ai-assisted-qa/: SKILL.md
skills/ai-assisted-qa/agents/: openai.yaml
skills/ai-assisted-qa/assets/: project-agent-rules.md
skills/ai-assisted-qa/references/: artifact-contract.md  eleven-principles.md  final-report-template.md  publication-safety.md  risk-patterns.md  route-memory.md  staged-session-prompts.md
src/qa_case_pipeline/: __init__.py  case_renderer.py  cli.py  codex_adapter.py  evidence.py  models.py  reference_checks.py  renderer.py
src/qa_case_pipeline/fixtures/schema-legacy-compat/: brief.yaml  expected.json  input.json  plan.en.json  plan.ru.json
src/qa_case_pipeline/fixtures/ui-state-persistence/: brief.yaml  expected.json  input.json  plan.en.json  plan.ru.json
src/qa_case_pipeline/schemas/: qa-plan.schema.json
src/qa_case_pipeline/templates/reservation-state-propagation/: brief.yaml  demo-manual-results.yaml  manual-results.yaml  verification.yaml
tests/: test_cli.py  test_codex_adapter.py  test_evidence.py  test_models.py  test_reference_checks.py  test_renderer.py
(+5 files in other folders)
